[gd_scene load_steps=10 format=2]

[ext_resource path="res://Kenney Pirate Pixel Art/red_ship_1.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Kenney Pirate Pixel Art/red_ship_3.png" type="Texture" id=3]
[ext_resource path="res://Kenney Pirate Pixel Art/red_ship_2.png" type="Texture" id=4]
[ext_resource path="res://Player/GunLocation.gd" type="Script" id=5]
[ext_resource path="res://Player/shadow.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.33329
height = 24.6667

[sub_resource type="CapsuleShape2D" id=7]
radius = 8.66662
height = 26.0001

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0.113725, 0.113725, 0.113725, 0.0588235 )
scale = Vector2( 1.3, 1 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 9.53674e-07, 4.76837e-07 )
scale = Vector2( 2.83333, 2.16667 )

[node name="FiringPositions" type="Node2D" parent="."]

[node name="Gun" type="Node2D" parent="FiringPositions"]
position = Vector2( -12, 3 )
script = ExtResource( 5 )
shoot_direction = Vector2( -1, 0 )

[node name="Gun2" type="Node2D" parent="FiringPositions"]
position = Vector2( 11, 3 )
script = ExtResource( 5 )
shoot_direction = Vector2( 1, 0 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
